# halo2-examples

./: Cargo.toml  README.md  index.html  index_old.html  serve.py
examples/: example_2.rs
frontend/: .eslintignore  package-lock.json  package.json
frontend/config/: webpack.config.js
frontend/src/: App.js  index.js  setupProxy.js
src/: decompose_range_check.rs  example1.rs  example2.rs  example3.rs  fibonacci.rs  gadget.rs  is_zero.rs  lib.rs  main.rs  mockprover_table_err.rs  range_check.rs
src/decompose_range_check/: example1.rs  example2.rs  example3.rs
src/fibonacci/: example1.rs  example2.rs  example3.rs  example4.rs
src/gadget/: is_zero.rs
src/range_check/: example1.rs  example2.rs  example3.rs  example3_broken.rs
src/range_check/example2/: table.rs
src/range_check/example3/: table.rs
src/range_check/example3_broken/: table.rs
templates/: index.html
